@@ -39,6 +39,7 @@ use NewsExtractor::SiteSpecificExtractor::new_ctv_com_tw;
 use NewsExtractor::SiteSpecificExtractor::hk_crntt_com;
 use NewsExtractor::SiteSpecificExtractor::hk_on_cc;
 use NewsExtractor::SiteSpecificExtractor::www_xinhuanet_com;
+use NewsExtractor::SiteSpecificExtractor::news_cctv_com;
 use NewsExtractor::SiteSpecificExtractor::UDN;
 use NewsExtractor::SiteSpecificExtractor::ETtoday;
 use NewsExtractor::SiteSpecificExtractor::ChinaTimes;
@@ -96,6 +97,7 @@ use constant {
         'hk.crntt.com' => 'NewsExtractor::SiteSpecificExtractor::hk_crntt_com',
         'hk.on.cc' => 'NewsExtractor::SiteSpecificExtractor::hk_on_cc',
         'www.xinhuanet.com' => 'NewsExtractor::SiteSpecificExtractor::www_xinhuanet_com',
+        'news.cctv.com' => 'NewsExtractor::SiteSpecificExtractor::news_cctv_com',
     },
     CSSRuleSetByHost => {
         'www.taiwannews.com.tw' => {
