@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for news.cctv.com
+
 v0.28.0 2020-07-09T23:28:40+0800
   - Add a site-specific extractor for www.xinhuanet.com
   - Add a site-specific extractor for hk.on.cc
